[gd_scene load_steps=12 format=2]

[ext_resource path="res://plugins/minigames/escape_from_lava/minigame.gd" type="Script" id=1]
[ext_resource path="res://plugins/minigames/escape_from_lava/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/lava.png" type="Texture" id=3]
[ext_resource path="res://plugins/minigames/escape_from_lava/ground.dae" type="PackedScene" id=4]
[ext_resource path="res://scenes/waypoint/waypoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://plugins/minigames/escape_from_lava/door.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/title_font.tres" type="DynamicFont" id=7]

[sub_resource type="PlaneMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 128, 128 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=4]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
albedo_texture = ExtResource( 3 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 4, 4, 4 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false

[sub_resource type="BoxShape" id=2]

extents = Vector3( 64, 0.1, 64 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 6, 0.1, 2 )

[node name="Spatial" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="EndTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Player1" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.25, -26 )
_sections_unfolded = [ "Transform" ]

[node name="Player2" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, -0.25, -26 )
_sections_unfolded = [ "Transform" ]

[node name="Player3" parent="." index="3" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -26 )
_sections_unfolded = [ "Transform" ]

[node name="Player4" parent="." index="4" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -26 )
_sections_unfolded = [ "Transform" ]

[node name="Lava" type="Area" parent="." index="5"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 2
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="MeshInstance" type="MeshInstance" parent="Lava" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 4 )
_sections_unfolded = [ "material" ]

[node name="CollisionShape" type="CollisionShape" parent="Lava" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Ground" parent="." index="6" instance=ExtResource( 4 )]

transform = Transform( 4.88762e-07, 0, -1, 0, 1, 0, 1, 0, 4.88762e-07, 0, 0, -32 )
_sections_unfolded = [ "Transform" ]

[node name="Navigation" type="Spatial" parent="." index="7"]

editor/display_folded = true

[node name="Waypoint" parent="Navigation" index="0" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.084275, -27 )
nodes = [ NodePath("../Waypoint2"), NodePath("../Waypoint3") ]

[node name="Waypoint2" parent="Navigation" index="1" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.62985, 0.114126, -19.9804 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint11"), NodePath("../Waypoint4") ]

[node name="Waypoint11" parent="Navigation" index="2" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.44189, 0.331367, -17.3166 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint7") ]

[node name="Waypoint3" parent="Navigation" index="3" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.20906, 0.185743, -20.4348 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint4"), NodePath("../Waypoint23") ]

[node name="Waypoint4" parent="Navigation" index="4" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.823617, 0.0889988, -19.827 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint5") ]

[node name="Waypoint5" parent="Navigation" index="5" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.823617, 1.04602, -12.6155 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint10"), NodePath("../Waypoint9"), NodePath("../Waypoint8") ]

[node name="Waypoint6" parent="Navigation" index="6" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.61305, 1.04602, -12.6155 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint8"), NodePath("../Waypoint9"), NodePath("../Waypoint10") ]

[node name="Waypoint23" parent="Navigation" index="7" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.64593, 0.291183, -16.39 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint6") ]

[node name="Waypoint7" parent="Navigation" index="8" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29073, 1.04602, -12.6155 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint8"), NodePath("../Waypoint9"), NodePath("../Waypoint10") ]

[node name="Waypoint8" parent="Navigation" index="9" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02846, 1.04602, -9.85709 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint12") ]

[node name="Waypoint12" parent="Navigation" index="10" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0476138, 2.02309, 1.16699 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint20"), NodePath("../Waypoint24"), NodePath("../Waypoint25") ]

[node name="Waypoint24" parent="Navigation" index="11" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0476138, 2.02309, 2.3228 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint17") ]

[node name="Waypoint17" parent="Navigation" index="12" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.625458, 3.42084, 16.1707 )
_sections_unfolded = [ "Transform" ]
nodes = null

[node name="Waypoint9" parent="Navigation" index="13" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.648482, 1.04602, -9.85709 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint15") ]

[node name="Waypoint15" parent="Navigation" index="14" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.54044, 1.46507, -3.39834 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint16") ]

[node name="Waypoint16" parent="Navigation" index="15" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48782, 2.03565, 0.954097 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint25"), NodePath("../Waypoint24"), NodePath("../Waypoint20") ]

[node name="Waypoint25" parent="Navigation" index="16" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.83911, 2.03565, 2.12917 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint18") ]

[node name="Waypoint18" parent="Navigation" index="17" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.45351, 3.24496, 10.5065 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint19") ]

[node name="Waypoint19" parent="Navigation" index="18" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.31945, 3.49915, 15.3296 )
_sections_unfolded = [ "Transform" ]
nodes = null

[node name="Waypoint10" parent="Navigation" index="19" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.49729, 1.04602, -9.85709 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint13") ]

[node name="Waypoint13" parent="Navigation" index="20" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.11438, 1.41743, -3.10745 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint14") ]

[node name="Waypoint14" parent="Navigation" index="21" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.04429, 1.88794, 1.12264 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint20"), NodePath("../Waypoint24"), NodePath("../Waypoint25") ]

[node name="Waypoint20" parent="Navigation" index="22" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.77909, 2.18118, 2.43186 )
_sections_unfolded = [ "Transform" ]
nodes = [ NodePath("../Waypoint21") ]

[node name="Waypoint21" parent="Navigation" index="23" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.32239, 3.30388, 10.6326 )
_sections_unfolded = [ "Transform" ]
nodes = null

[node name="Waypoint22" parent="Navigation" index="24" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.23368, 3.4117, 15.5594 )
_sections_unfolded = [ "Transform" ]
nodes = null

[node name="Camera" type="Camera" parent="." index="8"]

transform = Transform( -1, 1.37706e-07, -2.95313e-07, 0, 0.906308, 0.422618, 3.25841e-07, 0.422618, -0.906308, 0, 4, -30 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="9"]

transform = Transform( 0.244635, 0.809901, -0.533117, -0.140853, 0.573675, 0.806881, 0.95933, -0.1223, 0.254418, -16.1204, 4.31411, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="Stage1" type="Spatial" parent="." index="10"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )

[node name="Door" parent="Stage1" index="0" instance=ExtResource( 6 )]

transform = Transform( 0.853528, 0, 0.521047, 0, 1, 0, -0.521047, 0, 0.853528, -2.08251, 0.391993, 1.9765 )

[node name="Door2" parent="Stage1" index="1" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.990371, 0.508965, 1.29821 )

[node name="Door3" parent="Stage1" index="2" instance=ExtResource( 6 )]

transform = Transform( 0.845698, 0, -0.533662, 0, 1, 0, 0.533662, 0, 0.845698, 3.86756, 0.389152, 1.8705 )

[node name="Stage2" type="Spatial" parent="." index="11"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )

[node name="Door" parent="Stage2" index="0" instance=ExtResource( 6 )]

transform = Transform( 0.826698, 0, 0.562646, 0, 1, 0, -0.562646, 0, 0.826698, -2.58123, 1.9003, 3.85974 )

[node name="Door2" parent="Stage2" index="1" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.104514, 1.77055, 3.50319 )

[node name="Door3" parent="Stage2" index="2" instance=ExtResource( 6 )]

transform = Transform( 0.82975, 0, -0.558135, 0, 1, 0, 0.558135, 0, 0.82975, 3.45657, 1.96211, 4.19291 )

[node name="Stage3" type="Spatial" parent="." index="12"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8 )

[node name="Door" parent="Stage3" index="0" instance=ExtResource( 6 )]

transform = Transform( 0.997894, 0, 0.0648651, 0, 1, 0, -0.0648651, 0, 0.997894, -7.69064, 3.39246, 4.75503 )

[node name="Door2" parent="Stage3" index="1" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.146158, 3.40687, 4.56786 )

[node name="Door3" parent="Stage3" index="2" instance=ExtResource( 6 )]

transform = Transform( 0.961371, 0, -0.275255, 0, 1, 0, 0.275255, 0, 0.961371, 4.49052, 3.39487, 4.56296 )

[node name="Finish" type="Area" parent="." index="13"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3.5, 17 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Finish" index="0"]

shape = SubResource( 3 )
disabled = false

[node name="Screen" type="Control" parent="." index="14"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="Screen" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 50.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Finish!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]

[connection signal="body_entered" from="Lava" to="." method="_on_Lava_body_entered"]

[connection signal="body_entered" from="Finish" to="." method="_on_Finish_body_entered"]


